--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./style.css"> 
+    <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather app</title>
 </head>
+
 <body>
     <div class="app-wrap">
-       <header>
-       <input type="text" class="search-box" id="" placeholder="Search for a city">
+        <header>
+            <input type="text" class="search-box" id="" placeholder="Search for a city">
 
-       </header>
-     <main>
-        <section class="location">
-            <div class="city">Bergen, NO</div>
-            <div class="date">Tuesday 01 january 2024</div>
-        </section>
-        <div class="current">
-            <div class="temp" id="temperature">15 <span>°C</span></div>
-            <div class="weather">Sunny</div>
-            <div class="hi-low">13°C / 16°C </div>
-        </div>
-       </main>
+        </header>
+        <main>
+            <section class="location">
+                <div class="city">Your city</div>
+                <div class="date">Today's date</div>
+            </section>
+            <div class="current">
+                <div class="temp" id="temperature">- <span>°C</span></div>
+                <div class="weather">Weather</div>
+                <div class="hi-low">Min temp / Max temp </div>
+            </div>
+        </main>
     </div>
 
 </body>
+
 </html>
