--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <div class="app-wrap">
         <header>
-            <input type="text" class="search-box" id="" placeholder="Search for a city">
+            <input type="text" class="search-box" id="search-box" placeholder="Search for a city"> <button
+                id="button"><img src="./Vector.png" alt="" srcset=""></button>
 
         </header>
         <main>
