moved images to folder and fixed image paths

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="app-wrap">
         <header>
             <input type="text" class="search-box" id="search-box" placeholder="Search for a city"> <button
-                id="button"><img src="./Vector.png" alt="" srcset=""></button>
+                id="button"><img src="./images/Vector.png" alt="" srcset=""></button>
 
         </header>
         <main>
