--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="app-wrap">
         <header>
             <input type="text" class="search-box" id="search-box" placeholder="Search for a city"> <button
-                class="search-button" id="button"><img src="./images/Vector.png" alt="" srcset=""></button>
+                aria-label="Search button" id="button"><img src="./images/Vector.png" alt="" srcset=""></button>
 
         </header>
         <main>
