fixed meta description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="weather-app"
+    <meta name="description"
         content="A lightweight and simple app that shows the weather and temperature in any city in the world.">
     <title>Weather app</title>
 </head>
